--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -74,6 +74,7 @@ vi:
     not_found: Không tìm thấy phim
     updated: Phim đã được cập nhật
     deleted: Đã xóa phim
+    details: Chi tiết phim
     showing: Phim đang chiếu
     description: "Mô tả : %{description} "
     time: "Thời lượng : %{time}"
@@ -94,3 +95,8 @@ vi:
     name: "Tên rạp : %{name}"
     address: "Địa chỉ : %{address}"
     title: Rạp
+  booking:
+    create:
+      title: Đặt vé xem phim
+      btn: Đặt vé
+      success: Đặt vé thành công
